fixed layout bugs

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #cfd8dc;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
